--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-g+X/jtdJxRtM00Hw89+OWivbIQyVgDhF0J+V0fWUhkX7VxJ0GK1N7+pdLWKPuCI7MzK69gdyV7n/xbWf9V7iZg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Client</title>
   </head>
   <body>
     <div id="root"></div>
